fix(css): adjust modal styles in dark mode

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -41,10 +41,12 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    color: var(--global-black);
 }
 
 .modal-title {
     font-size: 20px;
+    color: var(--global-black);
 }
 
 .modal-content p {
